--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
-	<title>karen</title>
+	<title>gappas</title>
 <meta name="robots" content="max-image-preview:large">
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -158,7 +158,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karen's Terminal</title>
+    <title>gappas's Terminal</title>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         body, body *:not(script):not(style) {
@@ -310,7 +310,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
     <div class="container">
-        <h1 class="neon-title">KAREN'S TERMINAL</h1>
+        <h1 class="neon-title">gappas'S TERMINAL</h1>
         
         <div class="complaint-board">
             <img decoding="async" src="images/Screenshot-2025-01-30-234125-e1738284117666.png" class="karen-img" alt="Angry Karen">
@@ -331,7 +331,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
             <div class="yelp-review">
                 <h3>"YOUR MOM'S BASEMENT CALLED - THEY WANT THEIR AESTHETIC BACK"</h3>
-                <p>~ VERIFIED KAREN AI ~</p>
+                <p>~ VERIFIED gappas AI ~</p>
             </div>
         </div>
     </div>
